# src.daeron.fr

./: build.py  license.md  pyproject.toml  readme.md
html/: index.html
md/: about.md  biblio.md  contact.md  index.md  links.md  pgp.md  ramblings.md  sourcecode.md  staticwebsite.md  til.md
md/ramblings/: doi2bibtex.md  modern-latex.md  sourcecode.md  static-website.md  typyt.md  uv-shebang.md
md/til/: new-til-section.md
minxelatex/: minimal-xelatex.tex  myrefs.bib
static/: style.css
