[project]
name = "src-daeron-fr"
authors = [{name = "Mathieu Daëron", email = "mathieu@daeron.fr"}]
readme = "readme.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.13"

[project.urls]
Home = "https://github.com/mdaeron/src.daeron.fr"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.system-requirements]
macos = "12.7.5"

[tool.pixi.tasks]
build = {cmd = 'python build.py'}

[tool.pixi.dependencies]
pdoc = ">=14.4.0,<15"
markdown = ">=3.6,<4"
pymdown-extensions = ">=10.11.2,<11"
